<resources>
    <string name="app_name">LoginTemp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_mealplan">Meal Plan</string>
    <string name="title_settings">Settings</string>

    <string name="title_profile">Profile</string>

    <string name="profile_picture">Profile picture</string>


    <string name="sign_up">Sign Up</string>
    <string name="we_are_about_to_start_our_adventure_register_or_log_in">We are about to start our adventure register or log in</string>
    <string name="or">Or</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="passHint">***********</string>
    <string name="sign_up_2">SIGN UP</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="join_the_sous_chef">Join the Sous Chef</string>
    <string name="create_an_account_to_save_your_favorite_recipes_and_start_cooking_like_a_pro">Create an account to save your favorite recipes and start cooking like a pro.</string>
    <string name="backarrow">backArrow</string>
    <string name="google">Google</string>
    <string name="book">Book</string>
    <string name="close">close</string>
    <string name="text_6">
        <font color="#000000">Discover a new way to save and explore</font>
        <font color="#FE8417">recipes </font>
</string>
    <string name="text_7">
        <font color="#000000">Do your</font>
        <font color="#FE8417">groceries</font>
        <font color="#000000">shopping with</font>
        <font color="#FE8417">confidence</font>

</string>
    <string name="text_8">
        <font color="#000000">Enjoy your</font>
        <font color="#FE8417">cooking</font>
</string>

    <string name="text_9">
        <font color="#000000">Next Step?</font>
        <font color="#FE8417">Jump in</font>
</string>
    <string name="text_10">
        <font color="#000000"> Introducing our meal planner</font>
</string>
    <string name="text_11">
        <font color="#FE8417">Plan - schedule - buy - cook - eat </font>
</string>
    <string name ="mealmess">Made easier for you to have your weekly meal ready to go</string>
    <string name="text_13">
        <font color="#000000">Set up your meal cooking  planner, pantry and do your </font>
        <font color="#FE8417">groceries</font>
        <font color="#000000">with</font>
        <font color="#FE8417">confidence</font>
    </string>
    <string name="text_14">
        <font color="#FE8417">MEAL PLANNER </font>
</string>


    <string name="text_1">
        <font color="#000000">Start your exciting</font>
        <font color="#FE8417">Recipes </font>
        <font color="#000000">Book journey</font>
</string>
    <string name="text_2">
        <font color="#BDBDBD">By logging, in you agree to the</font>
        <font color="#FE8417" font-weight="bold">terms and conditions </font>
        <font color="#BDBDBD">of this application</font>
</string>
    <string name="edit">edit</string>
    <string name="recipe_instructions">

        <font color="#A4A4A4">• Once finished, click  </font><font color="#FE8417">next</font>

</string>
    <string name="recipe_instructions2">

        <font color="#A4A4A4">3. Then click on  </font><font color="#FE8417"> Schedule</font>

</string>
    <string name="no_ingredients_yet">No ingredients yet</string>
    <string name="no_steps_yet">No steps yet</string>
    <string name="field_required">Required</string>
    <string name="eg_15">eg,..15</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image">Profile Image</string>
    <string name="recipe_image">Recipe Image</string>

    <!-- HOME -->
    <string name="greeting_user">Hi, User</string>

    <string name="lets_try_these_out">Let\'s Try These Out</string>
    <string name="see_all">See all</string>
    <string name="categories">Categories</string>
    <string name="favorite_recipes">Favorite Recipes</string>

    <!-- My Recipes-->
    <string name ="myrecipe">My Recipe</string>

    <!-- Meal planner - planner -->
    <string name="meal_planner_title">MEAL PLANNER</string>
    <string name="planner_button">PLANNER</string>
    <string name="pantry_button">PANTRY</string>

    <!-- Meal planner pantry -->
    <string name="title_pantry">PANTRY</string>
    <string name="btn_planner">PLANNER</string>
    <string name="btn_pantry">PANTRY</string>

    <string name="pantry_instructions_title">PANTRY INSTRUCTIONS</string>
    <string name="pantry_instructions_subtitle">Follow the instructions below:</string>

    <string name="pantry_step_1">1. Click on the + button.</string>
    <string name="pantry_step_2">2. In the pop-up screen, write the item name (e.g., “Sugar”).</string>
    <string name="pantry_step_3">3. Choose the entry category → either Have or To Get.</string>
    <string name="pantry_step_4">4. Then click on the Add button.</string>
    <string name="pantry_step_5">5. Just like that, you have added your pantry item.</string>
    <string name="pantry_step_6">6. The item will be displayed in the list under either Have or To Get, depending on your choice.</string>

    <string name="label_have">HAVE:</string>
    <string name="label_to_get">TO GET</string>

    <!-- Meal plan-->
    <string name="instructions_plan_meal_title">PLAN MEAL INSTRUCTIONS</string>
    <string name="instructions_subtitle">Follow the instructions below:</string>

    <string name="instruction_step_1">1. Choose the recipe.</string>
    <string name="instruction_step_2">2. Choose the date using the date picker.</string>
    <string name="instruction_step_3">3. Select your meal time (Breakfast, Lunch, or Dinner).</string> <!-- For @string/recipe_instructions2 -->
    <string name="instruction_step_4">4. Just like that, you have added your planned meal.</string>

    <string name="label_recipe_name">RECIPE NAME</string>
    <string name="hint_select_recipe">Select from My Recipes</string>

    <string name="label_date">DATE</string>
    <string name="hint_select_date">Select date</string>

    <string name="btn_schedule">Schedule</string>

    <!-- settings -->
    <string name="settings"> Settings</string>
    <string name="account_settings">Account settings</string>
    <string name="username_label">username</string>
    <string name="password_masked">Password:********</string>

    <string name="dark_mode">Dark Mode</string>
    <string name="biometrics">Biometrics</string>

    <string name="contact_us">Contact us</string>

    <string name="logout">LOGOUT</string>

    <string name="app_version">App version 1.1 sous chef</string>

    <string name = "notifications">Notifications</string>

    <string name="language_label">Language: English</string>

    <!-- Recipe detail-->
    <string name="recipe_name">Recipe name</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="ingredients_count">Ingredients: %1$d</string>
    <string name="duration_minutes">%1$d min</string>
    <string name="steps_label">Steps</string>
    <!-- get meal -->
    <string name ="next">Next</string>
    <string name ="skip">Skip</string>
    <string name="oops">No more Oups i forgot to buy tomatoes</string>
    <string name="start">Get Started</string>

    <!--create recipe-->
    <string name="create_recipe">Create recipe</string>
    <string name="step_1">1</string>

    <string name="add_recipe_name_and_image">Add your recipe name and image</string>
    <string name="follow_instructions_below">Follow the instructions below:</string>

    <string name="fill_fields">• Fill the fields below</string>
    <string name="give_recipe_name">• Give your recipe a name</string>
    <string name="date_of_creation">• The date of creation</string>
    <string name="select_category">• Select the category</string>
    <string name="add_image_instruction">• And finally add an image</string>


    <string name="recipe_name_title">RECIPE NAME</string>
    <string name="recipe_name_hint">eg., “Lasagna”</string>

    <string name="category_title">CATEGORY</string>
    <string name="category_hint">Select a category</string>

    <string name="cooking_time">COOKING TIME (min)</string>
    <string name="time_hint">eg. 15</string>

    <string name="add_image_title">ADD IMAGE</string>
    <string name="upload_file">Upload File</string>
    <string name="clear_file">✕</string>
    <string name="file_example_name">Lasagna.png</string>

    <string name="cancel">CANCEL</string>


    <string name="add_ingredients_title">Add ingredients to your recipe</string>


    <string name="step_click_add_ingredient">• Click on add ingredient</string>
    <string name="step_write_ingredient">• Then write an ingredient in the pop up screen as well as the amount</string>
    <string name="step_click_add">• Then click on add</string>
    <string name="step_ingredient_added">• Just like that you have added your ingredient</string>
    <string name="step_ingredients_displayed">• The ingredients will be displayed below</string>
    <string name="step_repeat_until_done">• Repeat the steps until you add all your ingredients</string>

    <string name="add_steps_title">Add steps to your recipe</string>


    <string name="step_click_add_step">• Click on Add Step.</string>
    <string name="step_write_step_description">• In the pop-up screen, write the step description (e.g., “Preheat the oven to 180°C (350°F)”).</string>

    <string name="step_added_success">• Just like that, you have added your step.</string>
    <string name="steps_displayed_below">• The steps will be displayed below.</string>
    <string name="repeat_until_all_steps_added">• Repeat the process until you have added all your steps.</string>


</resources>