<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_myrecipe"
        android:icon="@drawable/myrecipes"
        android:title="My recipes" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/favourites"
        android:title="Favorites" />

    <item
        android:id="@+id/navigation_mealplan"
        android:icon="@drawable/mealplan"
        android:title="@string/title_mealplan"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/title_settings" />

</menu>